# brainstore

./: .gitignore  Makefile  docker-compose.yml  manage.py  pyproject.toml
ai/: admin.py  apps.py  models.py  receivers.py  services.py  tasks.py  tests.py  types.py
ai/migrations/: 0001_initial.py  0002_alter_request_parent_type.py  0002_rename_message_message_request_and_more.py  0003_alter_message_category.py  0003_alter_request_parent_id.py  0004_delete_request.py
app/: celery.py  settings.py
bot/: apps.py  loader.py  signals.py  start.py
bot/handlers/: __init__.py
bot/handlers/user/: __init__.py  lang.py  reminder.py  start.py
bot/keyboards/: base.py  lang.py
bot/management/commands/: start_bot.py
bot/middlewares/: __init__.py  user.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
reminder/: admin.py  apps.py  models.py  receivers.py  tasks.py
reminder/migrations/: 0001_initial.py  0002_initial.py
reminders/: apps.py  models.py  receivers.py  tasks.py
reminders/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  services.py
users/migrations/: 0001_initial.py
